Fix QR code colors not being visible while rinting

--- a/src/css/print.css
+++ b/src/css/print.css
@@ -1,5 +1,5 @@
 /* stylelint-disable */
-*,
+*:not(#QRCodeResult td),
 *::before,
 *::after {
     /* stylelint-enable */
@@ -67,4 +67,10 @@ main section:last-of-type { /* stylelint-disable-line */
 
 .warningMessagePopup {
     display: none;
+}
+
+/* uncss:ignore */
+#QRCodeResult td {
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
 }
